# DAIRHuM

./: README.md  pyproject.toml  run_app.py
Nysnth_R1_embeddings/Kanjira/: R1-V0-Kanjira.npy  R1-V2-Kanjira.npy  R1-V4-Kanjira.npy
Nysnth_R1_embeddings/Mridangam/: R1-V0-Mridangam.npy  R1-V1-Mridangam.npy  R1-V2-Mridangam.npy
Nysnth_R1_embeddings/Track/openl3/: R1-V0.npy  R1-V5.npy
Nysnth_R2_embeddings/Kanjira/: R2-V1-Kanjira.npy  R2-V2-Kanjira.npy  R2-V4-Kanjira.npy
Nysnth_R2_embeddings/Track/: R2-V2.npy  R2-V4.npy
Nysnth_R2_embeddings/Track/openl3/: R2-V0.npy  R2-V1.npy  R2-V3.npy
Nysnth_R3_embeddings/Kanjira/: R3-V0-Kanjira.npy  R3-V1-Kanjira.npy  R3-V3-Kanjira.npy  R3-V4-Kanjira.npy
Nysnth_R3_embeddings/Mridangam/: R3-V0-Mridangam.npy  R3-V2-Mridangam.npy  R3-V5-Mridangam.npy
Nysnth_R3_embeddings/Track/: R3-V4.npy
Nysnth_R3_embeddings/Track/openl3/: R3-V0.npy  R3-V3.npy  R3-V4.npy  R3-V5.npy
data/: User_ratings.csv  stats_rbf_kernel_1000.csv
data/embeddings/Nysnth_R1_embeddings/Kanjira/: R1-V1-Kanjira.npy
data/embeddings/Nysnth_R1_embeddings/Mridangam/: R1-V3-Mridangam.npy  R1-V5-Mridangam.npy
data/embeddings/Nysnth_R1_embeddings/Track/: R1-V0.npy
data/embeddings/Nysnth_R2_embeddings/Kanjira/: R2-V0-Kanjira.npy  R2-V3-Kanjira.npy
data/embeddings/Nysnth_R2_embeddings/Mridangam/: R2-V3-Mridangam.npy  R2-V5-Mridangam.npy
data/embeddings/Nysnth_R2_embeddings/Track/: R2-V5.npy
data/embeddings/Nysnth_R3_embeddings/Kanjira/: R3-V2-Kanjira.npy  (+1 more)
src/: Alignment.py  __init__.py  create_stats_table.py  main.py  prepare_data.py  save_embeddings.py
(+33 files in other folders)
